# CommonAssessmentTool

./: .env  .pylintrc  Dockerfile  README.md  docker-compose.yml  initialize_data.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  ci_cd.yml
app/: database.py  main.py  models.py  requirements.txt
app/auth/: router.py
app/clients/: router.py  schema.py
app/clients/service/: client_service.py  constants.py  logic.py  ml_models.py  ml_models_router.py  model.py  model_helper.py  models.py
app/clients/service/pretrained_models/: model_Linear_Regression.pkl  model_Random_Forest_Regressor.pkl  model_Support_Vector_Machine.pkl
tests/: conftest.py  test_auth.py  test_clients.py
