# Overall Project Configuration
[project]
name = "Common_Assessment_Tool"
version = "1.0.0"
authors = [{name = "David Treadwell", email = "treadwell.d@northeastern.edu"}, {name = "Fran Li", email = "li.fengr@northeastern.edu"}, {name = "Steve Chen", email = "chen.steve2@northeastern.edu"}]
readme = "README.md"
license = "MIT"
dependencies = [
    'annotated-types==0.7.0',
    'anyio==4.4.0',
    'certifi==2024.7.4',
    'click==8.1.7',
    'dnspython==2.6.1',
    'email_validator==2.2.0',
    'fastapi==0.112.2',
    'fastapi-cli==0.0.5',
    'h11==0.14.0',
    'httpcore==1.0.5',
    'httptools==0.6.1',
    'httpx==0.27.2',
    'idna==3.8',
    'Jinja2==3.1.4',
    'joblib==1.4.2',
    'markdown-it-py==3.0.0',
    'MarkupSafe==2.1.5',
    'mdurl==0.1.2',
    'numpy==2.1.0',
    'pandas==2.2.2',
    'pydantic==2.8.2',
    'pydantic_core==2.20.1',
    'Pygments==2.18.0',
    'python-dateutil==2.9.0.post0',
    'python-dotenv==1.0.1',
    'python-multipart==0.0.9',
    'pytz==2024.1',
    'PyYAML==6.0.2',
    'rich==13.8.0',
    'scikit-learn==1.5.1',
    'scipy==1.14.1',
    'shellingham==1.5.4',
    'six==1.16.0',
    'sniffio==1.3.1',
    'starlette==0.38.2',
    'threadpoolctl==3.5.0',
    'typer==0.12.5',
    'typing_extensions==4.12.2',
    'tzdata==2024.1',
    'uvicorn==0.30.6',
    'watchfiles==0.23.0',
    'websockets==13.0'
]
requires-python = ">=3.10"

# Project urls
[project.urls]
Repository = "https://github.com/dtread4/CommonAssessmentTool"

# Build system
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Packages finder
[tool.setuptools.packages.find]
where = ["."]

# Optional dependency configuration
[project.optional-dependencies]
dev = ["black", "isort"]
extra = ['uvloop==0.20.0']

# Black Configuration
[tool.black]
line-length = 100
include = '\.pyi?$'
skip-magic-trailing-comma = true
target-version = ['py310']

# isort Configuration
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
force_single_line = false
skip = ["venv", ".venv", "migrations"]