# Overall Project Configuration
[project]
name = "Common_Assessment_Tool"
version = "1.0.0"
authors = [{name = "David Treadwell", email = "treadwell.d@northeastern.edu"}, {name = "Fran Li", email = "li.fengr@northeastern.edu"}, {name = "Steve Chen", email = "chen.steve2@northeastern.edu"}]
readme = "README.md"
license = "MIT"
dynamic = ["dependencies"]
requires-python = ">=3.10"

# Set up dependencies from requirements.txt file
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Project urls
[project.urls]
Repository = "https://github.com/dtread4/CommonAssessmentTool"

# Build system
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Packages finder
[tool.setuptools.packages.find]
where = ["."]

# Optional dependency configuration
[project.optional-dependencies]
dev = ["black", "isort"]
extra = ['uvloop==0.20.0']

# Black Configuration
[tool.black]
line-length = 100
include = '\.pyi?$'
skip-magic-trailing-comma = true
target-version = ['py310']

# isort Configuration
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
force_single_line = false
skip = ["venv", ".venv", "migrations"]